--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "sketch-assistant-template",
+  "name": "sketch-quality-checker",
   "homepage": "https://github.com/sketch-hq/sketch-assistant-template",
   "version": "1.0.0",
   "main": "dist/index.js",
   "sketch": "dist/sketch.js",
   "license": "MIT",
   "sketch-assistant": {
-    "title": "Sketch Assistant Template",
+    "title": "Sketch Quality Checker",
     "description": "Template repository for a starter Assistant project",
-    "icon": ""
+    "icon": "icon.png"
   },
   "author": {
     "name": "Your Name or Company Name"
@@ -44,6 +44,7 @@
     "webpack-cli": "3.3.12"
   },
   "dependencies": {
-    "@sketch-hq/sketch-assistant-types": "6.0.0"
+    "@sketch-hq/sketch-assistant-types": "6.0.0",
+    "@sketch-hq/sketch-core-assistant": "^6.1.0"
   }
 }
